--- a/simpleregistration.html
+++ b/simpleregistration.html
@@ -6,12 +6,15 @@
 <body>
     <h2>Registration Form</h2>
     <form action="/submit_registration" method="post">
-        
+
         <label for="firstName">First Name:</label>
         <input type="text" id="firstName" name="firstName" required><br><br>
 
         <label for="lastName">Last Name:</label>
         <input type="text" id="lastName" name="lastName" required><br><br>
+
+        <label for="Email">Email</label>
+        <input type="email" id="Email" name="Email" required><br><br>
 
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required><br><br>
