--- a/simpleregistration.html
+++ b/simpleregistration.html
@@ -13,8 +13,11 @@
         <label for="lastName">Last Name:</label>
         <input type="text" id="lastName" name="lastName" required><br><br>
 
-        <label for="Email">Email</label>
+        <label for="Email">Email:</label>
         <input type="email" id="Email" name="Email" required><br><br>
+
+        <label for="Age">Age:</label>
+        <input type="number" id="Age" name="Age" required><br><br>
 
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required><br><br>
