--- a/simpleregistration.html
+++ b/simpleregistration.html
@@ -19,6 +19,9 @@
         <label for="Age">Age:</label>
         <input type="number" id="Age" name="Age" required><br><br>
 
+        <label for="Gender">Gender:</label>
+        <input type="text" id="Gender" name="Gender" required><br><br>
+
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required><br><br>
 
