--- a/simpleregistration.html
+++ b/simpleregistration.html
@@ -25,6 +25,9 @@
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required><br><br>
 
+        <label for="confirm password">confirm Password:</label>
+        <input type="password" id="confirm password" name="confirm password" required><br><br>
+
         <input type="submit" value="Register">
     </form>
 </body>
